--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,24 +1,37 @@
 body {
     font-family: 'Courier New', Courier, monospace;
+    padding-left: 10px;
 }
 h1 {
-    color:slategray;
+    color:rgb(95, 124, 91);
     font-size: 230%;
   }
 p {
     color:black;
     font-size: 100%;
+    padding-top: 20px;
   }
-
+.main-box {
+  max-width: 500px;
+  margin: auto;
+  background: white;
+  padding-top: 90px;
+  position: relative;
+}
 .start-butn {
     border: none;
-    color: white;
-    background-color:forestgreen;
-    padding: 7px 20px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 17px;
-    margin: 3px 1px;
-    cursor: pointer;
+ 
+  position: absolute;
+  top: 120%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  color: white;
+  background-color:forestgreen;
+  padding: 7px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 17px;
+  cursor: pointer;
   }
