--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,24 +11,28 @@ p {
     font-size: 100%;
     padding-top: 20px;
   }
-.main-box {
+.wrapper {
   max-width: 500px;
   margin: auto;
   background: white;
   padding-top: 90px;
   position: relative;
 }
+.hide {
+  display: none;
+}
+
 .high-score {
     position: relative;
     top: 10px;
     left:10;
 }
-#time {
+.timer {
     position: absolute;
     top: 10px;
     right: 10px;
 }
-#start-butn {
+#start {
     border: none;
   position: absolute;
   top: 120%;
@@ -43,4 +47,20 @@ p {
   display: inline-block;
   font-size: 17px;
   cursor: pointer;
+  }
+  h2 {
+    display: block;
+    font-size:150%;;
+    color:rgb(95, 124, 91);
+    font-weight: bold;
+    justify-content: center;
+  
+  }
+  #choices{
+    border: none;
+        background-color:forestgreen;
+  padding: 7px 20px;
+    display: inline-block;
+  font-size: 17px;
+  
   }
