--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,10 @@
 body {
     font-family: 'Courier New', Courier, monospace;
     padding-left: 10px;
-}
+    padding-top: 20px;
+    max-width: 500px;
+    margin: auto;
+  }
 h1 {
     color:rgb(95, 124, 91);
     font-size: 230%;
@@ -22,10 +25,11 @@ p {
   display: none;
 }
 
-.high-score {
-    position: relative;
+.score {
+    display: flex;
+    justify-content: flex-start;
     top: 10px;
-    left:10;
+    left:auto;
 }
 .timer {
     position: absolute;
@@ -47,20 +51,25 @@ p {
   display: inline-block;
   font-size: 17px;
   cursor: pointer;
+  
   }
+
   h2 {
     display: block;
+    position: relative;
     font-size:150%;;
     color:rgb(95, 124, 91);
-    font-weight: bold;
+    font-weight: bold;   
+     }
+  button {
+    display:flex;
+    flex-direction: column;
     justify-content: center;
-  
-  }
-  #choices{
-    border: none;
-        background-color:forestgreen;
-  padding: 7px 20px;
-    display: inline-block;
-  font-size: 17px;
-  
-  }
+       margin: 10px;
+    cursor: pointer;
+        font-size: 100%;
+    background-color: forestgreen;
+        padding: 2px 10px;
+    color: white;
+    border: 0;
+              }
