--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,4 +72,8 @@ p {
         padding: 2px 10px;
     color: white;
     border: 0;
-              }
+   }
+   ol {
+    color:black;
+    font-size: 100%;
+   }
