--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,79 +1,88 @@
 body {
-    font-family: 'Courier New', Courier, monospace;
-    padding-left: 10px;
-    padding-top: 20px;
-    max-width: 500px;
-    margin: auto;
-  }
-h1 {
-    color:rgb(95, 124, 91);
-    font-size: 230%;
-  }
-p {
-    color:black;
-    font-size: 100%;
-    padding-top: 20px;
-  }
-.wrapper {
-  max-width: 500px;
-  margin: auto;
-  background: white;
-  padding-top: 90px;
-  position: relative;
+  font-family: Arial;
+  font-size: 120%;
 }
+
+a {
+  color: #563d7c;
+  text-decoration: none;
+  transition: color 0.1s;
+}
+
+a:hover {
+  color: #8570a5;
+}
+
+button {
+  display: inline-block;
+  margin: 5px;
+  cursor: pointer;
+  font-size: 100%;
+  background-color: #563d7c;
+  border-radius: 5px;
+  padding: 2px 10px;
+  color: white;
+  border: 0;
+  transition: background-color 0.1s;
+}
+
+button:hover {
+  background-color: #8570a5;
+}
+
+.choices button {
+  display: block;
+}
+
+input[type='text'] {
+  font-size: 100%;
+}
+
+ol {
+  padding-left: 0px;
+  max-height: 400px;
+  overflow: auto;
+}
+
+li {
+  padding: 5px;
+  list-style: decimal inside none;
+}
+
+li:nth-child(odd) {
+  background-color: #f3edfc;
+}
+
+.wrapper {
+  margin: 100px auto 0 auto;
+  max-width: 600px;
+}
+
 .hide {
   display: none;
 }
 
-.score {
-    display: flex;
-    justify-content: flex-start;
-    top: 10px;
-    left:auto;
-}
-.timer {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-}
-#start {
-    border: none;
-  position: absolute;
-  top: 120%;
-  left: 50%;
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  color: white;
-  background-color:forestgreen;
-  padding: 7px 20px;
+.start {
   text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 17px;
-  cursor: pointer;
-  
-  }
+}
 
-  h2 {
-    display: block;
-    position: relative;
-    font-size:150%;;
-    color:rgb(95, 124, 91);
-    font-weight: bold;   
-     }
-  button {
-    display:flex;
-    flex-direction: column;
-    justify-content: center;
-       margin: 10px;
-    cursor: pointer;
-        font-size: 100%;
-    background-color: forestgreen;
-        padding: 2px 10px;
-    color: white;
-    border: 0;
-   }
-   ol {
-    color:black;
-    font-size: 100%;
-   }
+.scores {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+}
+
+.feedback {
+  font-style: italic;
+  font-size: 120%;
+  margin-top: 20px;
+  padding-top: 10px;
+  color: gray;
+  border-top: 2px solid #ccc;
+}
+
+.timer {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
